@@ -5,16 +5,15 @@
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
 
-inherit python-r1 autotools git-2
+inherit python-r1 versionator
 
 DESCRIPTION="Log collector for the Open Virtualization Manager"
 HOMEPAGE="http://gerrit.ovirt.org"
-EGIT_REPO_URI="git://gerrit.ovirt.org/${PN}"
-EGIT_BRANCH="master"
+SRC_URI="http://resources.ovirt.org/releases/$(get_version_component_range 1-2)/src/${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64"
 IUSE=""
 
 RDEPEND="sys-devel/gettext
@@ -23,7 +22,6 @@ DEPEND="${RDEPEND}
 	app-emulation/ovirt-engine-sdk"
 
 src_prepare() {
-	eautoreconf
 	python_copy_sources
 }
 
